[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/core/NewHero.gd" type="Script" id=1]
[ext_resource path="res://assets/images/sheets/sprites.png" type="Texture" id=2]
[ext_resource path="res://assets/images/icons/back.png" type="Texture" id=3]
[ext_resource path="res://assets/themes/ui/left_arrow.png" type="Texture" id=4]
[ext_resource path="res://assets/themes/ui/right_arrow.png" type="Texture" id=5]
[ext_resource path="res://assets/images/icons/check_dark.png" type="Texture" id=6]
[ext_resource path="res://assets/images/icons/check.png" type="Texture" id=7]

[node name="NewHero" type="Control"]
margin_right = 72.0
margin_bottom = 128.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 2.0
margin_top = 99.0
margin_right = 60.0
margin_bottom = 110.0
text = "Hero"
align = 1
max_length = 12
context_menu_enabled = false
selecting_enabled = false
placeholder_text = "Hero Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBtn" type="TextureButton" parent="LineEdit"]
modulate = Color( 0.941176, 0.917647, 0.890196, 1 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1.0
margin_top = -5.5
margin_right = 10.0
margin_bottom = 5.5
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
texture_disabled = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Banner" type="ColorRect" parent="."]
modulate = Color( 0.941176, 0.917647, 0.890196, 1 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -5.0
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Banner"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.0588235, 0.0588235, 0.0784314, 1 )
text = "Recruit Hero"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBtn" type="TextureButton" parent="Banner"]
margin_right = 72.0
margin_bottom = 7.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 1.0
margin_top = 33.0
margin_right = 71.0
margin_bottom = 42.0
color = Color( 1, 1, 0.921569, 1 )

[node name="ClassAction" type="Label" parent="."]
margin_top = 34.0
margin_right = 72.0
margin_bottom = 41.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TINKER"
align = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Features" type="Label" parent="ClassAction"]
margin_top = 8.0
margin_right = 73.0
margin_bottom = 64.0
text = "Equip up to 4 more Tools.
After battles, the Artificer has a chance to repair his equipped guns and tools.
5445454545454"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 5.0
margin_top = 1.0
margin_right = 17.0
margin_bottom = 13.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Panel"]
position = Vector2( 2, 2 )
texture = ExtResource( 2 )
centered = false
hframes = 10
vframes = 20
frame = 30
__meta__ = {
"_edit_lock_": true
}

[node name="Stats" type="Control" parent="."]
margin_left = 5.0
margin_top = 6.0
margin_right = 67.0
margin_bottom = 31.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="Panel" parent="Stats"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -17.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="STR" type="Label" parent="Stats/Stats"]
margin_left = 3.0
margin_top = 1.0
margin_right = 15.0
margin_bottom = 8.0
custom_colors/font_color = Color( 0.8, 0.376471, 0.337255, 1 )
text = "STR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Stats/Stats/STR"]
margin_left = -1.0
margin_top = 7.0
margin_right = 12.0
margin_bottom = 14.0
color = Color( 0.8, 0.376471, 0.337255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Stats/Stats/STR"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 7.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0.0588235, 0.0588235, 0.0784314, 1 )
text = "999"
align = 1
valign = 1

[node name="AGI" type="Label" parent="Stats/Stats"]
margin_left = 18.0
margin_top = 1.0
margin_right = 30.0
margin_bottom = 8.0
custom_colors/font_color = Color( 0.858824, 0.713726, 0.258824, 1 )
text = "AGI"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Stats/Stats/AGI"]
margin_left = -1.0
margin_top = 7.0
margin_right = 12.0
margin_bottom = 14.0
color = Color( 0.858824, 0.713726, 0.258824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Stats/Stats/AGI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 7.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0.0588235, 0.0588235, 0.0784314, 1 )
text = "999"
align = 1
valign = 1

[node name="INT" type="Label" parent="Stats/Stats"]
margin_left = 33.0
margin_top = 1.0
margin_right = 45.0
margin_bottom = 8.0
custom_colors/font_color = Color( 0.380392, 0.768627, 0.854902, 1 )
text = "INT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Stats/Stats/INT"]
margin_left = -1.0
margin_top = 7.0
margin_right = 12.0
margin_bottom = 14.0
color = Color( 0.380392, 0.768627, 0.854902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Stats/Stats/INT"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 7.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0.0588235, 0.0588235, 0.0784314, 1 )
text = "999"
align = 1
valign = 1

[node name="DEF" type="Label" parent="Stats/Stats"]
margin_left = 48.0
margin_top = 1.0
margin_right = 60.0
margin_bottom = 8.0
custom_colors/font_color = Color( 0.705882, 0.705882, 0.682353, 1 )
text = "DEF"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Stats/Stats/DEF"]
margin_left = -1.0
margin_top = 7.0
margin_right = 12.0
margin_bottom = 14.0
color = Color( 0.705882, 0.705882, 0.682353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Stats/Stats/DEF"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 7.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0.0588235, 0.0588235, 0.0784314, 1 )
text = "999"
align = 1
valign = 1

[node name="HP" type="Label" parent="Stats"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -8.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0.313726, 0.760784, 0.227451, 1 )
text = "50"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPLabel" type="ColorRect" parent="Stats/HP"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -3.5
margin_right = -1.0
margin_bottom = 3.5
color = Color( 0.313726, 0.760784, 0.227451, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Stats/HP/HPLabel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "HP"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CRIT" type="Label" parent="Stats"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 20.0
margin_right = 32.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0.658824, 0.517647, 0.952941, 1 )
text = "10%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="Stats/CRIT"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -3.5
margin_right = -1.0
margin_bottom = 3.5
color = Color( 0.658824, 0.517647, 0.952941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Stats/CRIT/BG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CRIT"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ClassName" type="Label" parent="."]
margin_top = 113.0
margin_right = 72.0
margin_bottom = 120.0
text = "ARTIFICER"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrevBtn" type="TextureButton" parent="."]
margin_left = 1.0
margin_top = 113.0
margin_right = 9.0
margin_bottom = 120.0
texture_normal = ExtResource( 4 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextBtn" type="TextureButton" parent="."]
margin_left = 64.0
margin_top = 113.0
margin_right = 72.0
margin_bottom = 120.0
texture_normal = ExtResource( 5 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="LineEdit/CheckBtn" to="." method="_on_CheckBtn_pressed"]
[connection signal="pressed" from="Banner/BackBtn" to="." method="_on_BackBtn_pressed"]
[connection signal="pressed" from="PrevBtn" to="." method="_on_PrevBtn_pressed"]
[connection signal="pressed" from="NextBtn" to="." method="_on_NextBtn_pressed"]
